# Morning-Mailer

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Dockerfile  README.md  cli_users.py  compose.yml  oauth_setup.sh  pyproject.toml  tasks.py  users.json.sample
modules/: __init__.py  agent_mod.py  agent_utils.py  fetch_emails.py  generics.py  ipython_startup.py  logger.py  prompt.py  redis_users.py  web_auth.py
